
2006-11-20 cjg
 * Fixed typo in requestremoval
 * Added tab in a convert plugin
 * Autocomplete now sends values of all fields in row.
 * Autocomplete now handles absolute id's and block replacement
    (in addition to field-value replacement).
 * Name search now uses all values, not just current field.

2006-11-20 tdb
 * Added wrapper element around <METS> (unsure whether there is
    an 'official' wrapper?)
 * Made openurl error messages more friendly - "not found" is now a
    system phrase
 * Added a show_404 option to handle_404 that, if set in the connection
    notes and is false, suppresses the normal 404 response
 * Added a not_found method to Session (compliments redirect)

2006-11-20 cjg
 * Removed bunch of unused CGI scripts
 * Moved /users/staff/export to users/export so that /users/staff could
    be removed.
 * Tidied help text and plugin-list output for import and export bins.

2006-11-20 cjg
 * Changed METS to call getChildNodes rather than childNodes

2006-11-20 moj
 * Added inital version of event_by_name (passes back the event
    type, but this isn't handled by the autocompleter script 
    yet)

2006-11-20 cjg
 * Added recommit functionality to epadmin

2006-11-20 tmb
 * Moved "Request a Copy" scripts to screens

2006-11-21 cjg
 * Removed a whole bunch of unused cgi scripts
 * Moved all admin tools into epadmin

2006-11-21 cjg
 * Feeds are now rendered as links in the export bar.
 * Added some padding to the icons in message windows.

2006-11-21 cjg
 * Redrew up & down sorting arrows
 * Redrew up & down multi-row rearranging arrows and changed the layout.
 * Added vertical aligning to +/- icons.
 * Redrew +/- icons
 * Redrew required star icon
 * Added an example image for other icons
 * Redrew delete file/document X icon.

2006-11-21 moj
 * Fixed small bug in Convert.pm (if split on mime type returned
    undef)
 * Added link to repository version from View.pm (if item is in
    live archive).
