@@ -462,6 +462,8 @@ User Area CGI Scripts
     <epp:phrase id="cgi/users/status:indexer_running">Running</epp:phrase>
     <epp:phrase id="cgi/users/status:indexer_stopped">Stopped</epp:phrase>
     <epp:phrase id="cgi/users/status:indexer_stalled">Stalled</epp:phrase>
+    <epp:phrase id="cgi/users/status:indexer_queue">Size of Index Queue</epp:phrase>
+    <epp:phrase id="cgi/users/status:indexer_queue_size"><pin name="size" /> Item(s)</epp:phrase>
     <epp:phrase id="cgi/users/status:database_ok">OK</epp:phrase>
     <epp:phrase id="cgi/users/status:database_down">DOWN</epp:phrase>
     <epp:phrase id="cgi/users/status:users">Total Users</epp:phrase>
